# Extracao2

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  MEMORY.md  PRD.md  README.md  conftest.py  push_github.bat  pyproject.toml  requirements.txt  setup.bat  vercel.json
apps/: storage_backends.py
apps/dashboard/: urls.py  views.py
apps/documentos/: admin.py  forms.py  models.py  storage.py  urls.py  views.py
apps/documentos/migrations/: 0001_initial.py  0002_initial.py
apps/documentos/templatetags/: doc_tags.py
apps/llm_service/: admin.py  api_provider.py  apps.py  forms.py  models.py  nvidia_provider.py  ollama_provider.py  provider_base.py  provider_factory.py  services.py  urls.py  validacao_schema.py  views.py
apps/llm_service/migrations/: 0001_initial.py  0003_update_nvidia_defaults_2.py  (+1 more)
apps/usuarios/: admin.py  models.py  urls.py  views.py
apps/validacao/: admin.py  apps.py  models.py  urls.py  views.py
config/: __init__.py  admin_site.py  apps.py  settings.py  urls.py  wsgi.py
prompts/: boleto.txt  contrato.txt  demonstrativo.txt  nota_fiscal.txt
schemas/: boleto.json  contrato.json  demonstrativo.json  nota_fiscal.json
static/css/: admin.css  main.css
templates/: base.html
templates/admin/: base.html  base_site.html  index.html
templates/dashboard/: ajuda.html  index.html
templates/documentos/: delete_confirm.html  detail.html  list.html  upload.html
templates/llm_service/: config.html
templates/usuarios/: login.html  perfil.html
templates/validacao/: detail.html  queue.html
tests/: test_llm_service.py  test_models.py
(+5 files in other folders)
